--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -39,29 +39,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="@dimen/_24sdp"
+                    android:layout_height="@dimen/_24sdp"
+                    android:src="@drawable/ic_organic"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    app:layout_constraintBottom_toBottomOf="@+id/product_type_spinner_card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/product_type_spinner_card" />
+
                 <TextView
                     android:id="@+id/product_type_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_16sdp"
-                    android:layout_marginTop="@dimen/_24sdp"
                     android:text="@string/product_type"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:textSize="@dimen/_16ssp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+                    app:layout_constraintStart_toEndOf="@+id/imageView6"
+                    app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/product_type_spinner_card"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_24sdp"
+                    android:layout_marginEnd="@dimen/_16sdp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/product_type_tv"
-                    app:layout_constraintEnd_toEndOf="@+id/places_type_spinner_card"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/places_type_spinner_card"
-                    app:layout_constraintTop_toTopOf="@+id/product_type_tv"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:strokeWidth="1dp">
 
                     <androidx.appcompat.widget.AppCompatSpinner
@@ -73,17 +85,28 @@
 
                 </com.google.android.material.card.MaterialCardView>
 
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="@dimen/_24sdp"
+                    android:layout_height="@dimen/_24sdp"
+                    android:src="@drawable/ic_training"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/places_type_spinner_card"
+                    app:layout_constraintTop_toTopOf="@+id/places_type_spinner_card" />
+
                 <TextView
                     android:id="@+id/training_places_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_16sdp"
-                    android:layout_marginTop="@dimen/_24sdp"
                     android:text="@string/training_places"
                     android:textSize="@dimen/_16ssp"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/product_type_spinner_card" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+                    app:layout_constraintStart_toEndOf="@+id/imageView7"
+                    app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
 
                 <com.google.android.material.card.MaterialCardView
@@ -91,14 +114,14 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_24sdp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp"
                     app:layout_constraintBottom_toBottomOf="@+id/training_places_tv"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/training_places_tv"
-                    app:layout_constraintTop_toTopOf="@+id/training_places_tv"
-                    app:strokeWidth="1dp"
-                    >
+                    app:layout_constraintTop_toBottomOf="@+id/product_type_spinner_card"
+                    app:strokeWidth="1dp">
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/training_places_spinner"
